decople logic in own classes, move grid generation logic on own class fix normals calculation with correct scaling

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dependencies/DREngine"]
 	path = dependencies/DREngine
 	url = git@github.com:unicorny/DREngine.git
+[submodule "dependencies/stb"]
+	path = dependencies/stb
+	url = https://github.com/nothings/stb
